fix spacing and alignment of components

--- a/src/App.css
+++ b/src/App.css
@@ -3,38 +3,8 @@
 }
 
 .profile-image {
-  height: 30vmin;
-  max-width: 50%;
-  max-height: auto;
+  height: 30vh;
+  max-width: auto;
   border-radius: 50%;
 
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.carousel-img 
-{
-max-width: 400px;
-height: auto;
-
-}
-
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  font-size: calc(10px + 2vmin);
-  color: white;
-
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-.topnavbar {
-  min-width: 100%;
 }
