--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-width: 100vw;
+  min-height: 100vh;
+
+/*  background-color: #282c34;
+  color: white;*/
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.carousel-img {
-  max-height: 300px;
-  max-width: auto;
 }
